--- a/DistanceLearning/Views/Shared/_Layout.cshtml
+++ b/DistanceLearning/Views/Shared/_Layout.cshtml
@@ -25,6 +25,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/AllUsers">Список пользователей</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/LecturerUsers">Список лекторов</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/StudentUsers">Список студентов</a>
+                        </li>
                     </ul>
 
                     <partial name="_LoginPartial" />
