--- a/DistanceLearning/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/DistanceLearning/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     <!-- Brand Logo -->
     <a href="/admin" class="brand-link">
       <img src="~/lib/admin-lte/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">AdminPanel</span>
     </a>
 
     <!-- Sidebar -->
@@ -71,6 +71,32 @@
                   </p>
               </a>
           </li>
+
+
+            <li class="nav-item">
+                <a class="nav-link" asp-area="Identity" asp-page="/User/AllUsers">
+                    <i class="fas fa-tasks"></i>
+                    <p>
+                        Список пользователей
+                    </p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="Identity" asp-page="/User/LecturerUsers">
+                    <i class="fas fa-tasks"></i>
+                    <p>
+                        Список лекторов
+                    </p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-area="Identity" asp-page="/User/StudentUsers">
+                    <i class="fas fa-tasks"></i>
+                    <p>
+                        Список студентов
+                    </p>
+                </a>
+            </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
