--- a/DistanceLearning/Areas/Identity/Pages/User/AllUsers.cshtml
+++ b/DistanceLearning/Areas/Identity/Pages/User/AllUsers.cshtml
@@ -2,6 +2,7 @@
 @model AllUsersModel
 @{
     ViewData["Title"] = "Список пользователей";
+    Layout = "/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row justify-content-center">
