--- a/DistanceLearning/Areas/Identity/Pages/User/ChangingRoles.cshtml
+++ b/DistanceLearning/Areas/Identity/Pages/User/ChangingRoles.cshtml
@@ -2,6 +2,7 @@
 @model ChangingRolesModel
 @{
     ViewData["Title"] = "Изменение ролей";
+    Layout = "/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row justify-content-center">
