--- a/DistanceLearning/Areas/Identity/Pages/User/LecturerUsers.cshtml
+++ b/DistanceLearning/Areas/Identity/Pages/User/LecturerUsers.cshtml
@@ -2,6 +2,7 @@
 @model DistanceLearning.Areas.Identity.Pages.User.LecturerUsersModel
 @{
     ViewData["Title"] = "Список лекторов";
+    Layout = "/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row justify-content-center">
