--- a/DistanceLearning/Areas/Identity/Pages/User/StudentUsers.cshtml
+++ b/DistanceLearning/Areas/Identity/Pages/User/StudentUsers.cshtml
@@ -2,6 +2,7 @@
 @model DistanceLearning.Areas.Identity.Pages.User.StudentUsersModel
 @{
     ViewData["Title"] = "Список студентов";
+    Layout = "/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <div class="row justify-content-center">
