--- a/DistanceLearning/Views/Shared/_Layout.cshtml
+++ b/DistanceLearning/Views/Shared/_Layout.cshtml
@@ -20,20 +20,15 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
 
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/AllUsers">Список пользователей</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StudentTasks" asp-action="Index">Задачник</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/LecturerUsers">Список лекторов</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/StudentUsers">Список студентов</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserTaskStatistics" asp-action="Index">Статистика</a>
                         </li>
                     </ul>
 
