--- a/DistanceLearning/Views/Shared/_LoginPartial.cshtml
+++ b/DistanceLearning/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
             <a class="nav-link text-dark" asp-area="admin" asp-controller="taskTypes" asp-action="index">Админ панель</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Привет @User.Identity?.Name!</a>
+            <a class="nav-link text-dark" asp-page="/" title="Manage">Привет @User.Identity?.Name!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
